--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "react": "^18",
+    "react-activity-calendar": "^2.5.1",
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "recharts": "^2.12.7",
