--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.13",
     "react": "^18",
     "react-activity-calendar": "^2.5.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "recharts": "^2.12.7",
