--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-activity-calendar": "^2.5.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-nice-avatar": "^1.5.0",
     "react-query": "^3.39.3",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
